--- a/angular.json
+++ b/angular.json
@@ -200,6 +200,96 @@
           }
         }
       }
+    },
+    "payment": {
+      "root": "apps/payment",
+      "sourceRoot": "apps/payment",
+      "projectType": "application",
+      "schematics": {},
+      "architect": {
+        "build": {
+          "builder": "@nrwl/next:build",
+          "options": {
+            "root": "apps/payment",
+            "outputPath": "dist/apps/payment/.next"
+          },
+          "configurations": {
+            "production": {
+              "dev": false
+            }
+          }
+        },
+        "serve": {
+          "builder": "@nrwl/next:dev-server",
+          "options": {
+            "buildTarget": "payment:build",
+            "dev": true
+          },
+          "configurations": {
+            "production": {
+              "dev": false
+            }
+          }
+        },
+        "export": {
+          "builder": "@nrwl/next:export",
+          "options": {
+            "buildTarget": "payment:build"
+          }
+        },
+        "lint": {
+          "builder": "@angular-devkit/build-angular:tslint",
+          "options": {
+            "tsConfig": [
+              "apps/payment/tsconfig.json",
+              "apps/payment/tsconfig.spec.json"
+            ],
+            "exclude": [
+              "**/node_modules/**",
+              "!apps/payment/**"
+            ]
+          }
+        },
+        "test": {
+          "builder": "@nrwl/jest:jest",
+          "options": {
+            "jestConfig": "apps/payment/jest.config.js",
+            "tsConfig": "apps/payment/tsconfig.spec.json"
+          }
+        }
+      }
+    },
+    "payment-e2e": {
+      "root": "apps/payment-e2e",
+      "sourceRoot": "apps/payment-e2e/src",
+      "projectType": "application",
+      "architect": {
+        "e2e": {
+          "builder": "@nrwl/cypress:cypress",
+          "options": {
+            "cypressConfig": "apps/payment-e2e/cypress.json",
+            "tsConfig": "apps/payment-e2e/tsconfig.e2e.json",
+            "devServerTarget": "payment:serve"
+          },
+          "configurations": {
+            "production": {
+              "devServerTarget": "payment:serve:production"
+            }
+          }
+        },
+        "lint": {
+          "builder": "@angular-devkit/build-angular:tslint",
+          "options": {
+            "tsConfig": [
+              "apps/payment-e2e/tsconfig.e2e.json"
+            ],
+            "exclude": [
+              "**/node_modules/**",
+              "!apps/payment-e2e/**"
+            ]
+          }
+        }
+      }
     }
   },
   "cli": {
@@ -212,6 +302,17 @@
     },
     "@nrwl/angular:library": {
       "unitTestRunner": "jest"
+    },
+    "@nrwl/react": {
+      "application": {
+        "babel": true
+      }
+    },
+    "@nrwl/next": {
+      "application": {
+        "style": "scss",
+        "linter": "tslint"
+      }
     }
   },
   "defaultProject": "admin"
