--- a/package.json
+++ b/package.json
@@ -29,7 +29,6 @@
   },
   "private": true,
   "dependencies": {
-    "@nrwl/angular": "8.7.0",
     "@angular/animations": "^8.2.0",
     "@angular/common": "^8.2.0",
     "@angular/compiler": "^8.2.0",
@@ -38,38 +37,61 @@
     "@angular/platform-browser": "^8.2.0",
     "@angular/platform-browser-dynamic": "^8.2.0",
     "@angular/router": "^8.2.0",
-    "core-js": "^2.5.4",
-    "rxjs": "~6.4.0",
-    "zone.js": "^0.9.1",
     "@nestjs/common": "^6.8.3",
     "@nestjs/core": "^6.8.3",
     "@nestjs/platform-express": "^6.8.3",
-    "reflect-metadata": "^0.1.13"
+    "@ngrx/effects": "8.3.0",
+    "@ngrx/entity": "8.3.0",
+    "@ngrx/router-store": "8.3.0",
+    "@ngrx/store": "8.3.0",
+    "@nguniversal/express-engine": "^8.1.1",
+    "@nrwl/angular": "8.7.0",
+    "@zeit/next-css": "1.0.1",
+    "@zeit/next-less": "1.0.1",
+    "@zeit/next-sass": "1.0.1",
+    "@zeit/next-stylus": "1.0.1",
+    "core-js": "^2.5.4",
+    "document-register-element": "1.13.1",
+    "next": "9.0.5",
+    "react": "16.10.2",
+    "react-dom": "16.10.2",
+    "reflect-metadata": "^0.1.13",
+    "rxjs": "~6.4.0",
+    "zone.js": "^0.9.1"
   },
   "devDependencies": {
+    "@angular-devkit/build-angular": "^0.803.3",
     "@angular/cli": "8.3.3",
-    "@nrwl/workspace": "8.7.0",
-    "@types/node": "~8.9.4",
-    "dotenv": "6.2.0",
-    "ts-node": "~7.0.0",
-    "tslint": "~5.11.0",
-    "eslint": "6.1.0",
-    "typescript": "~3.4.5",
-    "prettier": "1.18.2",
-    "@nrwl/nest": "8.7.0",
     "@angular/compiler-cli": "^8.2.0",
     "@angular/language-service": "^8.2.0",
-    "@angular-devkit/build-angular": "^0.803.3",
-    "codelyzer": "~5.0.1",
-    "jest-preset-angular": "7.0.0",
-    "@nrwl/jest": "8.7.0",
-    "jest": "24.1.0",
-    "@types/jest": "24.0.9",
-    "ts-jest": "24.0.0",
-    "cypress": "3.4.1",
-    "@nrwl/cypress": "8.7.0",
-    "@nrwl/node": "8.7.0",
     "@nestjs/schematics": "^6.7.0",
-    "@nestjs/testing": "^6.8.3"
+    "@nestjs/testing": "^6.8.3",
+    "@ngrx/schematics": "8.3.0",
+    "@ngrx/store-devtools": "8.3.0",
+    "@nrwl/cypress": "8.7.0",
+    "@nrwl/jest": "8.7.0",
+    "@nrwl/nest": "8.7.0",
+    "@nrwl/next": "^8.7.0",
+    "@nrwl/node": "8.7.0",
+    "@nrwl/react": "8.7.0",
+    "@nrwl/web": "8.7.0",
+    "@nrwl/workspace": "^8.7.0",
+    "@testing-library/react": "9.3.0",
+    "@types/jest": "24.0.9",
+    "@types/node": "~8.9.4",
+    "@types/react": "16.9.6",
+    "@types/react-dom": "16.9.2",
+    "codelyzer": "~5.0.1",
+    "cypress": "3.4.1",
+    "dotenv": "6.2.0",
+    "eslint": "6.1.0",
+    "http-server": "^0.11.1",
+    "jest": "24.1.0",
+    "jest-preset-angular": "7.0.0",
+    "prettier": "1.18.2",
+    "ts-jest": "24.0.0",
+    "ts-node": "~7.0.0",
+    "tslint": "~5.11.0",
+    "typescript": "~3.4.5"
   }
 }
